2002-02-02 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* Added textures to merchant ship
	* Committed better system and testmission for "Cunerpicus"

2002-01-30 Daniel Horn <hellcatv@hotmail.com>
	* Added nebulas to the list of vegastrike's features
	* Added explosions to the nebulas that make them glow from time to time
	* Added fog to nebulas so that things inside them will be fogged
	* Removed shield from nebulas so that shields are nonfunctional there
	* Scrambled sensors in nebulas
	* Added BSP trees to being in nebulas (so there is an "inside" as opposed to just a shell)
	* Made it so Nebulas don't collide with bullets
	
2002-01-30 Daniel Aleksandrow <dandandaman@users.sourceforge.net>

	* Added rlaan_cruiser --no textures/weapons or anything (just to look)
	* Added space truck, no textures or weapons (only a merchant)

2002-01-29 Daniel Horn <hellcatv@hotmail.com>
	* Fixed double delete of SubUnits when Kill() was being called and adding them to the delete queue (only to be delted by the Unit itself on the delete queue)
	* Fixed some reference count issues with lists

2002-01-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* removed some memory leaks in the interpreter
	

2002-01-29 Daniel Horn <hellcatv@hotmail.com>
	* Realized that ucref (the reference for units) was off by many many orders of magnitude...fixed
	* Realized that units weren't being deleted even if they were on the delete queue
	* Experimental! Enabled deletion. To disable #define DISABLE_DELETE in cmd/unit_damage.cpp  Let me know if you run into ANY problems freeing a unit! So far I have had one...but I haven't bene able to reproduce ... or get any stack of usefulness... maybe someone can point me in the right direction here...it would be a shame not to delete units
	* Added docking vector so that units may dock to each other (soon)


2002-01-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified star_system,planet,unit